tests/ui/generic-associated-types/must-prove-where-clauses-on-norm.current.stderr
error: lifetime bound not satisfied
  --> $DIR/must-prove-where-clauses-on-norm.rs:23:61
   |
LL |     let func: for<'a, 'b> fn((), &'b str) -> &'static str = foo::<()>;
   |                                                             ^^^^^^^^^
   |
   = note: this is a known limitation that will be removed in the future (see issue #100013 <https://github.com/rust-lang/rust/issues/100013> for more information)

error: aborting due to 1 previous error

